--- a/BYS_donemproje_bolumII_RameGames.html
+++ b/BYS_donemproje_bolumII_RameGames.html
@@ -974,8 +974,8 @@ oyunu, Sony Computer Entartainment’ın 1 oyunu, Microsoft Game Studios’un
 görülüyor.</p></li>
 </ul>
 </div>
-<div id="q4-veri-setinin-bys-platformuna-ihtali" class="section level2">
-<h2>Q4: Veri Setinin BYS Platformuna İhtali</h2>
+<div id="q4-veri-setinin-bys-platformuna-ithali" class="section level2">
+<h2>Q4: Veri Setinin BYS Platformuna İthali</h2>
 <p>Veri setimizi SuiteCRM platformuna entegre etmek için manuel import
 yöntemini kullanıldı ve belirli adımlar izlenildi. İlk olarak,
 SuiteCRM’e yönetici olarak giriş yapıldı ve “Admin” menüsünden “Module
@@ -988,6 +988,54 @@ modüle import edildi. Sütunlar otomatik olarak eşleştirildi ve veriler
 “Game1” sayfasında görünür hale getirildi. Bu adımlar sayesinde, veri
 seti SuiteCRM’e başarılı bir şekilde entegre edildi ve analizler için
 gerekli veriler platformda kullanılabilir hale getirildi.</p>
+</div>
+<div id="q5-yapılması-planlanan-veri-analizi" class="section level2">
+<h2>Q5: Yapılması Planlanan Veri Analizi</h2>
+<p><span style="color:cornflowerblue;"><strong>Amaç</strong><span></p>
+<p>Rame Games’in oyuncu etkileşimlerini optimize etmek, oyun
+performansını iyileştirmek, teknik sorunları hızlıca tespit etmek ve
+pazarlama stratejilerini etkili bir şekilde geliştirmek amacıyla mevcut
+veri seti üzerinde kritik analizler yapılması planlandı. Bu analizler,
+SuiteCRM’den çekilen veriler kullanılarak R Studio’da gerçekleştirilecek
+ve çeşitli grafikler ve istatistiksel yöntemler ile
+desteklenecektir.</p>
+<p><span style="color:cornflowerblue;"><em>Analiz Planı</em><span></p>
+<ul>
+<li><p>Veri Hazırlığı ve Temizleme</p></li>
+<li><p>Eksik verileri kontrol etmek ve gerekli temizleme işlemlerini
+yapmak.</p></li>
+<li><p>Satış verilerinin (na_sales, eu_sales, jp_sales, other_sales,
+global_sales) doğru biçimde olduğundan emin olmak.</p></li>
+</ul>
+<p><span style="color:cornflowerblue;"><em>Temel İstatistiksel
+Analizler</em><span></p>
+<ul>
+<li><p>Satış verilerinin (na_sales, eu_sales, jp_sales, other_sales,
+global_sales) ortalama, medyan, minimum ve maksimum değerlerini
+hesaplamak.</p></li>
+<li><p>Farklı platformlar, yıllar, türler bazında satış performansını
+analiz etmek.</p></li>
+</ul>
+<p><span style="color:cornflowerblue;"><em>Grafiksel
+Analizler</em><span></p>
+<ul>
+<li><p>Bar Grafikleri: Platform, tür bazında satış dağılımlarını
+göstermek.</p></li>
+<li><p>Dağılım Grafikleri: Farklı bölgelerdeki (NA, EU, JP, Other)
+satışların global satışlarla ilişkisini incelemek.</p></li>
+</ul>
+<p><span style="color:cornflowerblue;"><em>Kategorik
+Analizler</em><span></p>
+<ul>
+<li><p>Platform, tür bazında satış performansını analiz etmek.</p></li>
+<li><p>Farklı türlerin belirli platformlardaki başarı oranlarını
+incelemek.</p></li>
+<li><p>Segmentasyon ve Kümelenme Analizleri</p></li>
+<li><p>Satış verilerini kullanarak oyunları yüksek satışlı ve düşük
+satışlı olarak segmentlere ayırmak.</p></li>
+<li><p>Belirli segmentlerin (örneğin, yüksek satışlı oyunlar) platform
+ve tür bazında dağılımlarını incelemek.</p></li>
+</ul>
 </div>
 
 
