--- a/BYS_donemproje_bolumII_RameGames.html
+++ b/BYS_donemproje_bolumII_RameGames.html
@@ -1037,6 +1037,11 @@ satışlı olarak segmentlere ayırmak.</p></li>
 ve tür bazında dağılımlarını incelemek.</p></li>
 </ul>
 </div>
+<div id="q6-çalışan-platformun-gösterildiği-sesli-anlatımlı-video" class="section level2">
+<h2>Q6 : Çalışan platformun gösterildiği sesli anlatımlı video</h2>
+<p><strong>Video Linki : </strong></p>
+<p><em><a href="https://www.youtube.com/watch?v=pVM2XgaynU4" class="uri">https://www.youtube.com/watch?v=pVM2XgaynU4</a></em></p>
+</div>
 
 
 
